# merkle

./: .gitignore  changelog.md  dox.md  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
merkle/: classes.py  interfaces.py  merkle.py
merkleasy/: __init__.py  classes.py  errors.py  interfaces.py  serialization.py  sparse.py  vm.py  xorhashtree.py
tests/: context.py  test_classes.py  test_sparse.py  test_specification.py  test_vm.py  test_xorhashtree.py
