[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merkleasy"
version = "0.1.1"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Easy-to-use Merkle tree library."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography"
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/merkle"
"Bug Tracker" = "https://github.com/k98kurz/merkle/issues"